--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,17 @@
   "builds": [
     {
       "src": "api/index.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 30
+      }
     },
     {
       "src": "api/cron.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 30
+      }
     }
   ],
   "routes": [
@@ -20,14 +26,6 @@
       "dest": "api/index.ts"
     }
   ],
-  "functions": {
-    "api/index.ts": {
-      "maxDuration": 30
-    },
-    "api/cron.ts": {
-      "maxDuration": 30
-    }
-  },
   "crons": [
     {
       "path": "/cron",
