tsx 대신 TypeScript 컴파일 후 node 직접 실행으로 변경

--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -20,8 +20,14 @@ jobs:
           node-version: '20'
           cache: 'npm'
           
+      - name: Clear npm cache
+        run: npm cache clean --force
+          
       - name: Install dependencies
         run: npm ci
+        
+      - name: Build TypeScript
+        run: npx tsc
         
       - name: Run news collection
         env:
@@ -29,4 +35,4 @@ jobs:
           KWORK_TO_EMAIL: ${{ secrets.KWORK_TO_EMAIL }}
           KWORK_CONVERSATION_ID: ${{ secrets.KWORK_CONVERSATION_ID }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: npm run dev
+        run: node dist/index.js
