tsconfig.json 최적화: src만 컴파일하고 불필요한 옵션 제거

--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -35,4 +35,4 @@ jobs:
           KWORK_TO_EMAIL: ${{ secrets.KWORK_TO_EMAIL }}
           KWORK_CONVERSATION_ID: ${{ secrets.KWORK_CONVERSATION_ID }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-        run: node dist/index.js
+        run: node dist/src/index.js
