--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     "skipLibCheck": true,
     "outDir": "dist",
     "resolveJsonModule": true,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true
+    "sourceMap": false,
+    "declaration": false,
+    "declarationMap": false
   },
-  "include": ["src", "api"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "api"]
 }
