--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "payroll-brief-kakaowork",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
